2004-09-28  Timothy S. Stack <stack@cs.utah.edu>

	* developers/mnemonicizer.awk:
	Merge from JanosVM, used to convert ppc_isa.defs into ppc_isa.h.

2004-09-28  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/io/ObjectInputStream.java:
	Resynced with GNU Classpath.

	2004-09-24  Andrew Haley  <aph@redhat.com>

	* java/io/ObjectInputStream.java
	(readObject): Save and restore this.currentObject and
	this.currentObjectStreamClass around calls to callReadMethod().
	
	2004-09-24  Andrew Haley  <aph@redhat.com>

	* java/io/ObjectInputStream.java
	(readObject): Save and restore this.currentObject and
	this.currentObjectStreamClass around calls to callReadMethod().

2004-09-28  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/net/URL.java:
	Resynced with GNU Classpath.
	
	2004-09-24  David Daney  <ddaney@avtrex.com>

	* java/net/URL.java (URL): Copy userInfo from context.
	(getUserInfo): Return cached userInfo if present.
	
2004-09-26  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GtkFramePeer.c,
	libraries/javalib/java/awt/image/MultiPixelPackedSampleModel.java:
	New files taken from GNU Classpath.

	* libraries/clib/awt/classpath-gtk/gtk-peer/Makefile.am:
	(libgtkpeer_la_SOURCES) Added gnu_java_awt_peer_gtk_GtkFramePeer.c.

	* libraries/clib/awt/classpath-gtk/gtk-peer/Makefile.in,
	libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in,
	libraries/javalib/all.files:
	Regenerated.
	
	* libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c,
	libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c,
	libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GtkButtonPeer.c,
	libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxMenuItemPeer.c,
	libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxPeer.c,
	libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c,