@@ -5,7 +5,17 @@
 
 2004-09-28  Dalibor Topic  <robilad@kaffe.org>
 
-	* libraries/javalib/java/io/ObjectInputStream.java:
+	* libraries/javalib/java/security/BasicPermission.java:
+	Resynced with GNU Classpath.
+
+	2004-09-24  Andrew Haley  <aph@redhat.com>
+
+	* java/security/BasicPermission.java: Don't check wildcards.
+
+2004-09-28  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/java/io/ObjectOutputStream.java:
+	libraries/javalib/java/io/ObjectInputStream.java:
 	Resynced with GNU Classpath.
 
 	2004-09-24  Andrew Haley  <aph@redhat.com>
